--- a/task_manage_keys.adoc
+++ b/task_manage_keys.adoc
@@ -20,16 +20,19 @@ You can add and manage keys for enhanced security in Partner Central from the *K
 .Steps
 . From the dashboard, click image:settings_icon.png[settings icon].
 . Select *Key Management* from the dropdown menu.
-image:settings_key_management.png[settings dropdown menu select key management]
++
+image:settings_key_management.png[settings dropdown menu key management]
 . To add a key, click image:add_key_icon.png[add key icon].
++
 image:key_management_screen.png[key management screen]
-. On the *Add Key* screen, do the following:
+. In *Add Key*, do the following:
++
 image:add_key_screen.png[add key screen]
 .. Select the user.
 .. Add a description.
 .. Select expiry.
 .. Click *Add*.
-. A box appears with the message “Successfully generated the key.”
+A box appears with the message “Successfully generated the key.”
 . Click image:eye_show_key_icon.png[show key icon] to show the unencrypted key and click image:eye_hide_key_icon.png[hide key icon] to hide the unencrypted key.
 
 == Download PowerShell
@@ -37,7 +40,8 @@ image:add_key_screen.png[add key screen]
 .Steps
 . From the dashboard, click image:settings_icon.png[settings icon].
 . Select *Key Management* from the dropdown menu.
-image:settings_key_management.png[settings dropdown menu select key management]
++
+image:settings_key_management.png[settings dropdown menu key management]
 . To download PowerShell, click image:download_powershell_icon.png[download PowerShell icon].
 . Install the downloaded program.
 . After the program installation, double click the icon for *SaaS Backup PowerShell* on your desktop to start the PowerShell cmdlet.
