--- a/reference_new.adoc
+++ b/reference_new.adoc
@@ -15,7 +15,7 @@ summary: SaaS Backup Partner Central regularly introduces a new release to bring
 [.lead]
 The following new features and updates have been added to this release of NetApp SaaS Backup Partner Central.
 
-Visit the *What's New* view in the Partner Central dashboard to see a feed of new updates, how-to videos, and information about the health of your services.
+Go to the *What's New* view in the Partner Central dashboard to see a feed of new updates, how-to videos, and information about the health of your services.
 
 image:whats_new.png[what's new]
 
