--- a/task_manage_notifications.adoc
+++ b/task_manage_notifications.adoc
@@ -34,7 +34,7 @@ image:notification_management_screen.png[notification management screen]
 +
 .. To add notifications, click image:add_notification_icon.png[add notification icon] to add notifications to a user.
 +
-In *Add Notification*, enter the email address for the user you want to add and then customize notifications.
+In *Add Notification*, enter the email address for the user. Select notifications you want to enable and click *Add*.
 +
 image:add_notifications_screen.png[customize notifications]
 .. To modify notifications, click image:pencil_icon.png[pencil icon].
