--- a/index.adoc
+++ b/index.adoc
@@ -1,6 +1,7 @@
 ---
 sidebar: sidebar
 permalink: index.html
+keywords: saas backup, partner central, partners, microsoft 365, documentation, new, get started, provide feedback, get help, find, information
 summary: Welcome to the documentation portal for NetApp SaaS Backup for Partner Central.
 ---
 
@@ -10,7 +11,6 @@ summary: Welcome to the documentation portal for NetApp SaaS Backup for Partner 
 :icons: font
 :linkattrs:
 :imagesdir: ./media/
-:keywords: saas backup, partner central, partners, microsoft 365, documentation, new, get started, provide feedback, get help, find, information
 
 NetApp SaaS Backup Partner Central is an interface which helps NetApp partners manage and support customers who use SaaS Backup for Microsoft 365. It provides steps to register in Partner Central, manage your customers, and make modifications to settings and to partner and customer information.
 
